--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.3.1",
     "material-ui": "^0.20.2",
     "mongoose": "^5.2.10",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
