--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "fs": "0.0.1-security",
     "jquery": "^3.3.1",
     "material-ui": "^0.20.2",
+    "mobx": "^5.1.0",
+    "mobx-react": "^5.2.6",
     "mongoose": "^5.2.10",
+    "npm": "^6.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -28,5 +31,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:3001/"
+  "proxy": "http://localhost:3001/",
+  "devDependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+  }
 }
