--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "victory": "^30.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
